--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Be My Valentine? 💕</title>
     <meta name="description" content="A fun interactive Valentine's Day proposal app" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Be My Valentine? 💕" />
+    <meta property="og:description" content="A fun interactive Valentine's Day proposal app" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
